--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>test</title>
+  <title>Git Workshop</title>
 </head>
 <body>
   <h1>Hello, izumin!</h1>
